Pretendard 폰트 적용

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
@@ -6,10 +6,10 @@
     <link rel="icon" href="/src/ui/assets/textodon-icon-blue.png" type="image/png" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; img-src 'self' https: data: blob:; connect-src https: wss:; style-src 'self' 'unsafe-inline'; script-src 'self';"
+      content="default-src 'self'; img-src 'self' https: data: blob:; connect-src https: wss:; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; font-src 'self' https://cdn.jsdelivr.net data:; script-src 'self';"
     />
     <meta property="og:title" content="Deck" />
-    <meta property="og:description" content="오픈소스 페디버스 웹 클라이언트" />
+    <meta property="og:description" content="오픈소스 페디버스 클라이언트" />
     <meta property="og:image" content="/src/ui/assets/textodon-icon-blue.png" />
     <meta property="og:type" content="website" />
     <title>Deck</title>
